edit views "index","new","edit","show"

--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -8,11 +8,33 @@
 <body>
 
 <p th:text="${person}"></p>
+
 <br/>
+<a>List of taken books: </a>
+<span th:if="${personBooks.isEmpty()}">the list of books is empty.</span>
+
+<br/>
+<div th:each="book : ${personBooks}">
+    <span th:href="@{/books/{id}(id=${book.getId()})}"
+       th:text="${book}"></span>
+    <form style="display: inline"
+          th:method="PATCH" th:action="@{/people/{id}/edit/{bookId}(id=${person.getId()},
+    bookId=${book.getId()})}">
+        <input type="submit" value="Return the book"/>
+    </form>
+</div>
+<form th:method="GET" th:action="@{/books}">
+    <input type="submit" value="List of all books in library"/>
+</form>
+    <br/>
 
 <form th:method="GET" th:action="@{/people/{id}/edit(id=${person.getId()})}">
-    <input type="submit" value="Edit"/>
+    <input type="submit" value="Edit person"/>
 </form>
-
+<br/>
+<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
+    <input type="submit" value="Delete person"/>
+</form>
+<a href="/">Menu</a>
 </body>
 </html>
