--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -7,12 +7,14 @@
 <body>
 <div th:each="person : ${people}">
     <a th:href="@{/people/{id}(id=${person.getId()})}"
-       th:text="${person.getName() + ',' + person.getBirthYear()}">user</a>
+       th:text="${person}">user</a>
 </div>
 <br/>
 <hr/>
-
-<a href="/people/new">Add new person</a>
-
+<form th:method="GET" th:action="@{/people/new}">
+    <input type="submit" value="Add new person" />
+</form>
+<br/>
+<a href="/">Menu</a>
 </body>
 </html>
