--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -8,10 +8,12 @@
 <form th:method="POST" th:action="@{/people}" th:object="${person}">
   <label for="name">Input full name:  </label>
   <input type="text" th:field="*{name}" id="name"/>
+  <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
   <br/>
     <br/>
   <label for="birthYear">Input year of birth:  </label>
   <input type="text" th:field="*{birthYear}" id="birthYear"/>
+  <div style="color: red" th:if="${#fields.hasErrors('birthYear')}" th:errors="*{birthYear}">Year of birth Error</div>
   <br/>
     <br/>
   <input type="submit" value="Create"/>
