--- a/src/main/webapp/WEB-INF/views/books/edit.html
+++ b/src/main/webapp/WEB-INF/views/books/edit.html
@@ -9,13 +9,15 @@
       th:object="${book}">
     <label th:for="title">Input title: </label>
     <input th:type="text" th:field="*{title}" th:id="title">
+    <div style="color: red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title Error</div>
     <br/>
     <label th:for="author">Input author: </label>
     <input th:type="text" th:field="*{author}" th:id="author">
+    <div style="color: red" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">Author Error</div>
     <br/>
     <label th:for="year">Input year of publication: </label>
-    <input th:type="text" th:field="*{year}" th:id="year">
-    <br/>
+    <input th:type="integer" th:field="*{year}" th:id="year">
+    <br/>  <div style="color: red" th:if="${#fields.hasErrors('year')}" th:errors="*{year}">Year Error</div>
     <input type="submit" th:value="Update"/>
 </form>
 <a href="/">Menu</a>
