--- a/src/main/webapp/WEB-INF/views/books/new.html
+++ b/src/main/webapp/WEB-INF/views/books/new.html
@@ -8,12 +8,15 @@
 <form th:method="POST" th:action="@{/books}" th:object="${book}">
   <label th:for="title">Input title: </label>
   <input th:type="text" th:field="*{title}" th:id="title">
+  <div style="color: red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title Error</div>
   <br/>
   <label th:for="author">Input author: </label>
   <input th:type="text" th:field="*{author}" th:id="author">
+  <div style="color: red" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">Author Error</div>
   <br/>
   <label th:for="year">Input year of publication: </label>
-  <input th:type="text" th:field="*{year}" th:id="year">
+  <input th:type="integer" th:field="*{year}" th:id="year">
+  <div style="color: red" th:if="${#fields.hasErrors('year')}" th:errors="*{year}">Year Error</div>
   <br/>
   <input type="submit" th:value="Create"/>
 </form>
