--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -12,7 +12,7 @@
   <br/>
     <br/>
   <label for="birthYear">Input year of birth:  </label>
-  <input type="text" th:field="*{birthYear}" id="birthYear"/>
+  <input type="integer" th:field="*{birthYear}" id="birthYear"/>
   <div style="color: red" th:if="${#fields.hasErrors('birthYear')}" th:errors="*{birthYear}">Year of birth Error</div>
   <br/>
     <br/>
